2004-11-11 Alain Magloire
	PR 78573, patch from Brad Jarvinen
	* src/org/eclipse/cdt/internal/errorparser/VCErroParser.java

2004-11-11 Alain Magloire
	PR 78570, patch from Brad Jarvinen
	The default VC error parser understands (<line number>) but doesn't understand 
	(<line number>, <column>), which is also a valid VC error output format.
	* src/org/eclipse/cdt/internal/errorparser/VCErroParser.java

2004-11-10 Alain Magloire
	Typo in method IBinaryParser.ISymbol
	* src/org/eclipse/cdt/core/IBinaryParser.java
	* utils/org/eclipse/cdt/utils/Symbol.java

2004-11-10 Alain Magloire
	Fix for PR 78308, on deleting of non-C resources, no deltas
	was fired.

	* model/org/eclipse/cdt/internal/core/model/CModelManager.java

2004-11-05 Alain Magloire
	More framework for the formatter.
	* src/org/eclipse/cdt/core/ToolFactory.java
	* src/org/eclipse/cdt/core/CCorePlugin.java
	* src/org/eclipse/cdt/core/formatter/CodeFormatter.java
	* src/org/eclipse/cdt/core/formatter/CodeFormatterConstants.java
	
2004-11-01 Alain Magloire

	Change to the errorParserManager, ... finally
	- do no reorder the arbitrary the error parsers array
	- if IErrorParser.processLine() return true bail out.

	* src/org/eclipse/cdt/core/ErrorParserManager.java
	* plugin.xml

2004-10-14 David Inglis

	Move BinaryConfig into internal.model was no need to be public, also fixed it to
	be lazy when creating parser interface.
	
	* model/org/eclipse/cdt/internal/core/model/CModelManager.java
	* model/org/eclipse/cdt/internal/core/model/CProject.java
	* src/org/eclipse/cdt/core/BinaryParserConfig.java
	* src/org/eclipse/cdt/core/CCorePlugin.java
	* src/org/eclipse/cdt/core/ICExtensionReference.java	
	* src/org/eclipse/cdt/internal/core/CExtensionReference.java

	Removed 
	* model/org/eclipse/cdt/internal/core/model/BinaryParserConfig.java
	
2004-10-12 Vladimir Hirsl

	Fix for PR 69604 [Templates] Instantiating template with deferred template instance