@@ -9,6 +9,7 @@ import org.eclipse.cdt.core.ErrorParserManager;
 import org.eclipse.cdt.core.IErrorParser;
 import org.eclipse.cdt.core.IMarkerGenerator;
 import org.eclipse.core.resources.IFile;
+import org.eclipse.core.runtime.Path;
 
 public class GLDErrorParser implements IErrorParser {
 
@@ -37,15 +38,29 @@ public class GLDErrorParser implements IErrorParser {
 				if (colon != -1) {
 					previous = previous.substring(colon + 1);
 				}
-				 
+
+				// The pattern is to generall we have to guard:
+				// Before making this pattern a marker we do one more check
+				// The fileName that we extract __must__ look like a valid file name.
+				// We been having to much bad hits with patterns like
+				//   /bin/sh ../libtool --mode=link gcc -version-info 0:1:0 foo.lo var.lo
+				// Things like libtool that will fool the parser because of "0:1:0"
+				if (!Path.EMPTY.isValidPath(fileName)) {
+					return false;
+				}
+
 				desc = "*" + previous + " " + desc; //$NON-NLS-1$ //$NON-NLS-2$
-				// Since we do not have any way to know the name of the C file
-				// where the undefined reference is refering we set the error
-				// on the project.
-				IFile file = eoParser.findFilePath(fileName);
+				IFile file = eoParser.findFileName(fileName);
+				if (file != null) {
+					if (eoParser.isConflictingName(fileName)) {
+						file = null;
+					}
+				} else {
+					file = eoParser.findFilePath(fileName);
+				}
 				if (file == null) {
 					desc = fileName + " " + desc; //$NON-NLS-1$
-				} 
+				}
 				eoParser.generateMarker(file, 0, desc, IMarkerGenerator.SEVERITY_ERROR_RESOURCE, null);
 			} else if (buf.endsWith("ld")){ //$NON-NLS-1$
 				// By default treat the condition as fatal/error, unless marked as a warning
@@ -56,7 +71,14 @@ public class GLDErrorParser implements IErrorParser {
 				}
 
 				String fileName = line.substring(0, firstColon);
-				IFile file = eoParser.findFilePath(fileName);
+				IFile file = eoParser.findFileName(fileName);
+				if (file != null) {
+					if (eoParser.isConflictingName(fileName)) {
+						file = null;
+					}
+				} else {
+					file = eoParser.findFilePath(fileName);
+				}
 				if (file == null) {
 					desc = fileName + " " + desc; //$NON-NLS-1$
 				} 
